# wolf-kill

./: .gitignore  MEMORY.md  PROGRESS.md  README.md  pyproject.toml  test6.md
docs/: architecture.md  implementation-phases.md  review-notes.md
examples/: classic6-codex-kimi.json  classic6-you-plus-2codex-1claude-2kimi.json  classic6-you-plus-3claude-2codex.json  classic6-you-plus-3kimi-1codex-medium-1claude.json  classic6-you-plus-3kimi-2claude.json  classic6-you-plus-5codex.json  classic6-you-plus-5mixed-agents.json  debug2-you-plus-1claude.json  debug2-you-plus-1kimi.json  debug4-you-kimi-claude-codex-all-wolves.json
learn/: strategy_guide.md
tests/: test_cli.py  test_engine.py  test_gateway.py  test_observer_visibility.py  test_participants.py  test_visibility.py
wolfkill/: cli.py  colors.py  debug_logging.py  engine.py  gateway.py  localization.py  models.py  observer_visibility.py  participants.py  presets.py  visibility.py
