[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf-kill"
version = "0.1.0"
description = "Turn-based Werewolf engine with unified participant adapters for humans and external AI agents"
requires-python = ">=3.11"

[project.scripts]
wolfkill = "wolfkill.cli:main"

[tool.setuptools]
packages = ["wolfkill"]
